# yt-music-terminal

./: .gitignore  README.md  install.sh  main.py  pyproject.toml  requirements.txt
.github/workflows/: lint.yml
src/ytmusic/: __init__.py  __main__.py  app.py  app.tcss  config.py  models.py  player.py  storage.py  widgets.py
src/ytmusic.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/ytmusic/ui/: __init__.py  keybar.py  widgets.py
src/ytmusic/utils/: __init__.py  formatters.py
